--- a/index.html
+++ b/index.html
@@ -10,3 +10,14 @@
     
 </body>
 </html>
+<ol>
+    <li>
+        <a href="home.html">Inicio</a>
+    </li>
+    <li>
+        <a href="about.html">Sobre Nosotros</a>
+    </li>
+    <li>
+        <a href="contact_us.html">Contáctanos</a>
+    </li>
+</ol>
